Fix: #1539 - missing horizontal scrollbars in relationship chart

--- a/themes/fab/css-2.0.0/style.css
+++ b/themes/fab/css-2.0.0/style.css
@@ -2755,7 +2755,8 @@ div.faq_body {
 
 /*-- Relationship ---- */
 
-#relationship-page .hline-text, #relationship-page .vline-text {
+.wt-relationship-chart .hline-text,
+.wt-relationship-chart .vline-text {
 	font-size: 12px;
 }
 
